fixed many Qondana errors